@@ -342,12 +342,14 @@
     
     <string name="PreferencesActivity.VolumeKeysActionDefault">Comportement par défaut</string>
     <string name="PreferencesActivity.VolumeKeysActionZoom">Zoom</string>
+    <string name="PreferencesActivity.VolumeKeysActionScroll">Défiler</string>
     <string name="PreferencesActivity.VolumeKeysActionSwitchTabs">Changer d\'onglets</string>
     <string name="PreferencesActivity.VolumeKeysActionHistory">Précédent / suivant</string>
     
     <string-array name="VolumeKeysActionEntries">
 		<item>@string/PreferencesActivity.VolumeKeysActionDefault</item>
 		<item>@string/PreferencesActivity.VolumeKeysActionZoom</item>
+		<item>@string/PreferencesActivity.VolumeKeysActionScroll</item>
 		<item>@string/PreferencesActivity.VolumeKeysActionSwitchTabs</item>
 		<item>@string/PreferencesActivity.VolumeKeysActionHistory</item>
 	</string-array>
@@ -355,6 +357,7 @@
     <string-array name="VolumeKeysActionValues">
 		<item>DEFAULT</item>
 		<item>ZOOM</item>
+		<item>SCROLL</item>
 		<item>SWITCH_TABS</item>
 		<item>HISTORY</item>
 	</string-array>
@@ -523,7 +526,7 @@
     <string name="ProxySettings.ErrorProxyInternetNotReachable">Impossible d\'acceder au Web avec le serveur proxy spécifié.</string>
     <string name="ProxySettings.ProxySettingsEnabled">Proxy activé avec succès.</string>
     
-    <string name="AboutActivity.ContributorsText">Contributeurs:\n   • LeChuck (Proxy settings);</string>
+    <string name="AboutActivity.ContributorsText">Contributeurs:\n   • LeChuck (Proxy settings);\n   • Martin (Scroll with volume keys, German translation);</string>
     
     <string name="PreferencesActivity.EnableRestoreLastPagePreferenceTitle">Restaurer la dernière page visitée</string>
     <string name="PreferencesActivity.EnableRestoreLastPagePreferenceSummary">Si coché, la dernière page visité sera restaurée.</string>
